adding rpm package support